Removendo Spring Security e Consertando uma pancada de coisa quebrada.